--- a/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
+++ b/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.annotation-api-1.3.1.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,7 +48,8 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=14
 javac.target=14
 javac.test.classpath=\
