cambio bd y arreglado usuario

--- a/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
+++ b/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EdExt
 excludes=
+file.reference.derbyclient.jar=..\\libraries\\derbyclient.jar
 file.reference.javax.annotation-api-1.3.1.jar=..\\libraries\\javax.annotation-api-1.3.1.jar
 file.reference.mysql-connector-java-8.0.20.jar=..\\libraries\\mysql-connector-java-8.0.20.jar
 includes=**
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javax.annotation-api-1.3.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.20.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
