--- a/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
+++ b/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EdExt
+application.vendor=Agustin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,17 +34,22 @@ dist.jar=${dist.dir}/EdExt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EdExt
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=..\\libraries\\AbsoluteLayout.jar
 file.reference.derbyclient.jar=..\\libraries\\derbyclient.jar
 file.reference.javax.annotation-api-1.3.1.jar=..\\libraries\\javax.annotation-api-1.3.1.jar
-file.reference.mysql-connector-java-8.0.20.jar=..\\libraries\\mysql-connector-java-8.0.20.jar
+file.reference.jcalendar-1.4.jar=..\\libraries\\jcalendar-1.4.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=..\\libraries\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.annotation-api-1.3.1.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +86,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EdExt
-main.class=Presentacion.Main
+main.class=Presentacion.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
