--- a/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
+++ b/Laboratorio 1/Implementacion/EdExt/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=..\\libraries\\AbsoluteLayout.jar
 file.reference.derbyclient.jar=..\\libraries\\derbyclient.jar
+file.reference.flatlaf-0.20.jar=..\\libraries\\flatlaf-0.20.jar
 file.reference.javax.annotation-api-1.3.1.jar=..\\libraries\\javax.annotation-api-1.3.1.jar
 file.reference.jcalendar-1.4.jar=..\\libraries\\jcalendar-1.4.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=..\\libraries\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
@@ -49,9 +50,10 @@ javac.classpath=\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.flatlaf-0.20.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -97,7 +99,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
