--- a/Laboratorio 1/Implementacion/Parte 2/EstacionDeTrabajo/pom.xml
+++ b/Laboratorio 1/Implementacion/Parte 2/EstacionDeTrabajo/pom.xml
@@ -23,11 +23,6 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>ServidorCentral</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.netbeans</groupId>
             <artifactId>lib</artifactId>
             <version>3.6</version>
@@ -72,6 +67,12 @@
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
             <version>10.13.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>2</groupId>
+            <artifactId>ServidorCentral</artifactId>
+            <version>1-0</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
