--- a/Laboratorio 1/Implementacion/Parte 2/ServidorCentral/pom.xml
+++ b/Laboratorio 1/Implementacion/Parte 2/ServidorCentral/pom.xml
@@ -17,6 +17,11 @@
             <version>2.1.0</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
