login,logout,registrarse

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Laboratorio 1/Implementacion/EdExt/nbproject/private/
 /Laboratorio 1/Implementacion/EdExt/build/
+/Laboratorio 1/Implementacion/WebEduExt/target/
