--- a/Laboratorio 1/Implementacion/EstacionDeTrabajo/pom.xml
+++ b/Laboratorio 1/Implementacion/EstacionDeTrabajo/pom.xml
@@ -69,9 +69,9 @@
             <version>10.13.1.1</version>
         </dependency>
         <dependency>
-            <groupId>2</groupId>
+            <groupId>ServidorCentral</groupId>
             <artifactId>ServidorCentral</artifactId>
-            <version>1-0</version>
+            <version>1.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
