--- a/Laboratorio 1/Implementacion/WebEduExt/pom.xml
+++ b/Laboratorio 1/Implementacion/WebEduExt/pom.xml
@@ -15,11 +15,17 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.13.1.1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>ServidorCentral</groupId>
